# playground

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  build_run.sh  clang-toolchain.cmake  format_all.sh
.github/workflows/: cmake.yml
HelloWorld/: CMakeLists.txt  Makefile  cmake_install.cmake  hello.cpp
cmake/: gnu.cmake
play.cpp/: CMakeLists.txt
play.cpp/src/: CMakeLists.txt  main.cpp  play.cpp  play.cpp.autosave  play.hpp  play_auto.cpp  play_auto.hpp  play_bind.cpp  play_bind.hpp  play_decltype.cpp  play_decltype.hpp  play_variadic_templ.cpp  play_variadic_templ.hpp  write_type.hpp
play.cpp20/: CMakeLists.txt
play.cpp20/src/: CMakeLists.txt  coroutines.cpp  main.cpp  math1.cpp  math1.icx
roman.number/: CMakeLists.txt
roman.number/src/: CMakeLists.txt  RomanNumber.cpp  RomanNumber.hpp
roman.number/test/: CMakeLists.txt  RomanNumberTest.cpp  gtestmain.cpp
